--- a/drought.html
+++ b/drought.html
@@ -190,7 +190,7 @@
                     <div class="map-wrap">
                         <img src="https://droughtmonitor.unl.edu/data/png/current/current_usdm.png" alt="Current US Drought Monitor Map" id="droughtMap" loading="lazy">
                     </div>
-                    <div class="map-label">Source: <a href="https://droughtmonitor.unl.edu/" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">US Drought Monitor</a> (NOAA/<span class="tip" data-tip="United States Department of Agriculture">USDA</span>/UNL)</div>
+                    <div class="map-label">Source: <a href="https://droughtmonitor.unl.edu/?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">US Drought Monitor</a> (NOAA/<span class="tip" data-tip="United States Department of Agriculture">USDA</span>/UNL)</div>
                 </div>
             </div>
 
@@ -262,11 +262,11 @@
                     <table class="impact-table">
                         <thead><tr><th>Program</th><th>Covers</th><th>Trigger</th><th>Link</th></tr></thead>
                         <tbody>
-                            <tr><td><strong>LFP</strong></td><td>Livestock Forage Disaster</td><td>D2+ for 8 weeks on grazing land</td><td><a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/livestock-forage/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
-                            <tr><td><strong>ELAP</strong></td><td>Emergency Livestock Assistance</td><td>Livestock losses from drought</td><td><a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/emergency-assist-for-livestock-background/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
-                            <tr><td><strong>ECP</strong></td><td>Emergency Conservation</td><td>Fence, water facility repair</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/emergency-conservation/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
-                            <tr><td><strong>EM Loans</strong></td><td>Emergency Farm Loans</td><td>Disaster designation by county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/farm-loan-programs/emergency-farm-loans/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
-                            <tr><td><strong><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> Haying</strong></td><td><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> emergency haying/grazing</td><td>D2+ in county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/conservation-reserve-program/index" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Info →</a></td></tr>
+                            <tr><td><strong>LFP</strong></td><td>Livestock Forage Disaster</td><td>D2+ for 8 weeks on grazing land</td><td><a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/livestock-forage/index?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
+                            <tr><td><strong>ELAP</strong></td><td>Emergency Livestock Assistance</td><td>Livestock losses from drought</td><td><a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/emergency-assist-for-livestock-background/index?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
+                            <tr><td><strong>ECP</strong></td><td>Emergency Conservation</td><td>Fence, water facility repair</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/emergency-conservation/index?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
+                            <tr><td><strong>EM Loans</strong></td><td>Emergency Farm Loans</td><td>Disaster designation by county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/farm-loan-programs/emergency-farm-loans/index?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Apply →</a></td></tr>
+                            <tr><td><strong><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> Haying</strong></td><td><span class="tip" data-tip="Conservation Reserve Program — annual rental payments for retiring land">CRP</span> emergency haying/grazing</td><td>D2+ in county</td><td><a href="https://www.fsa.usda.gov/programs-and-services/conservation-programs/conservation-reserve-program/index?ref=agsist" target="_blank" rel="noopener noreferrer" style="color:var(--accent);">Info →</a></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -281,12 +281,12 @@
             <div class="panel-head"><h2>🔗 Official Drought Resources</h2></div>
             <div class="panel-body">
                 <div class="links-grid">
-                    <a href="https://droughtmonitor.unl.edu/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>US Drought Monitor</strong><span>Official weekly maps & data</span></a>
-                    <a href="https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>USDM Data Download</strong><span>CSV/Excel statistics</span></a>
-                    <a href="https://www.drought.gov/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Drought.gov</strong><span>Forecasts & planning tools</span></a>
-                    <a href="https://www.cpc.ncep.noaa.gov/products/expert_assessment/sdo_summary.php" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>CPC Drought Outlook</strong><span>Seasonal forecast</span></a>
-                    <a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/index" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>FSA Disaster Programs</strong><span>Federal aid for farmers</span></a>
-                    <a href="https://nassgeodata.gmu.edu/CropScape/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>CropScape</strong><span>Crop land cover maps</span></a>
+                    <a href="https://droughtmonitor.unl.edu/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>US Drought Monitor</strong><span>Official weekly maps & data</span></a>
+                    <a href="https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>USDM Data Download</strong><span>CSV/Excel statistics</span></a>
+                    <a href="https://www.drought.gov/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Drought.gov</strong><span>Forecasts & planning tools</span></a>
+                    <a href="https://www.cpc.ncep.noaa.gov/products/expert_assessment/sdo_summary.php?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>CPC Drought Outlook</strong><span>Seasonal forecast</span></a>
+                    <a href="https://www.fsa.usda.gov/programs-and-services/disaster-assistance-program/index?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>FSA Disaster Programs</strong><span>Federal aid for farmers</span></a>
+                    <a href="https://nassgeodata.gmu.edu/CropScape/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>CropScape</strong><span>Crop land cover maps</span></a>
                 </div>
             </div>
         </div>
