--- a/exports.html
+++ b/exports.html
@@ -132,7 +132,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#1a1500 100%);border:1px solid var(--accent);border-radius:10px;">
                 <div class="icon">🌽</div>
                 <div><h3>Corn Exports</h3><div class="detail">Marketing Year: Sep 1 - Aug 31 • US exports ~2.4 billion bushels annually (~15% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Corn Buyers</h2></div><div class="panel-body">
@@ -159,7 +159,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#0a1a0a 100%);border:1px solid #22c55e;border-radius:10px;">
                 <div class="icon">🫘</div>
                 <div><h3>Soybean Exports</h3><div class="detail">Marketing Year: Sep 1 - Aug 31 • US exports ~1.7 billion bushels annually (~40% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Soybean Buyers</h2></div><div class="panel-body">
@@ -186,7 +186,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#1a0a00 100%);border:1px solid #f97316;border-radius:10px;">
                 <div class="icon">🌾</div>
                 <div><h3>Wheat Exports</h3><div class="detail">Marketing Year: Jun 1 - May 31 • US exports ~800 million bushels annually (~40-50% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Wheat Buyers</h2></div><div class="panel-body">
@@ -254,10 +254,10 @@
             <div class="panel-head"><h2>📄 Weekly Export Reports</h2><span class="badge">Official USDA FAS</span></div>
             <div class="panel-body">
                 <div class="report-grid">
-                    <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📄</div><h3>Weekly Export Sales</h3><p>Current week net sales & shipments</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/myrpt-mg.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📈</div><h3>Marketing Year Totals</h3><p>Cumulative sales vs USDA projection</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/outstanding.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📋</div><h3>Outstanding Sales</h3><p>Unshipped commitments by country</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/highlights.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">⚡</div><h3>Sales Highlights</h3><p>Flash sales & notable transactions</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/esrd1.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📄</div><h3>Weekly Export Sales</h3><p>Current week net sales & shipments</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/myrpt-mg.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📈</div><h3>Marketing Year Totals</h3><p>Cumulative sales vs USDA projection</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/outstanding.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📋</div><h3>Outstanding Sales</h3><p>Unshipped commitments by country</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/highlights.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">⚡</div><h3>Sales Highlights</h3><p>Flash sales & notable transactions</p><span class="action">View Report →</span></a>
                 </div>
                 <div class="info-box" style="margin-top:16px;">
                     <strong>📅 Report Schedule:</strong> Export Sales reports release every <strong>Thursday at 8:30 AM ET</strong>, covering the prior Friday-Thursday week. Flash sales (100,000+ MT to one destination) are reported within 24 hours.
@@ -270,10 +270,10 @@
             <div class="panel-head"><h2>🔗 Trade Data Resources</h2></div>
             <div class="panel-body">
                 <div class="links-grid">
-                    <a href="https://apps.fas.usda.gov/gats/default.aspx" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>GATS Trade Data</strong><span>Country-by-country trade flows</span></a>
-                    <a href="https://apps.fas.usda.gov/psdonline/app/index.html" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>PSD Online</strong><span>World supply & demand by country</span></a>
-                    <a href="https://ipad.fas.usda.gov/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Crop Explorer</strong><span>Global crop conditions</span></a>
-                    <a href="https://www.fas.usda.gov/data/search" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>FAS Data Search</strong><span>All FAS datasets</span></a>
+                    <a href="https://apps.fas.usda.gov/gats/default.aspx?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>GATS Trade Data</strong><span>Country-by-country trade flows</span></a>
+                    <a href="https://apps.fas.usda.gov/psdonline/app/index.html?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>PSD Online</strong><span>World supply & demand by country</span></a>
+                    <a href="https://ipad.fas.usda.gov/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Crop Explorer</strong><span>Global crop conditions</span></a>
+                    <a href="https://www.fas.usda.gov/data/search?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>FAS Data Search</strong><span>All FAS datasets</span></a>
                 </div>
             </div>
         </div>
