--- a/news.html
+++ b/news.html
@@ -840,43 +840,43 @@
                 <div class="source-card">
                     <h3><span class="dot community"></span> Reddit Communities</h3>
                     <ul>
-                        <li><a href="https://reddit.com/r/farming" target="_blank" rel="noopener noreferrer">r/farming</a></li>
-                        <li><a href="https://reddit.com/r/agriculture" target="_blank" rel="noopener noreferrer">r/agriculture</a></li>
-                        <li><a href="https://reddit.com/r/tractors" target="_blank" rel="noopener noreferrer">r/tractors</a></li>
-                        <li><a href="https://reddit.com/r/ranching" target="_blank" rel="noopener noreferrer">r/ranching</a></li>
-                        <li><a href="https://reddit.com/r/agronomy" target="_blank" rel="noopener noreferrer">r/agronomy</a></li>
-                        <li><a href="https://reddit.com/r/dairyfarming" target="_blank" rel="noopener noreferrer">r/dairyfarming</a></li>
-                        <li><a href="https://reddit.com/r/Cattle" target="_blank" rel="noopener noreferrer">r/Cattle</a></li>
+                        <li><a href="https://reddit.com/r/farming?ref=agsist" target="_blank" rel="noopener noreferrer">r/farming</a></li>
+                        <li><a href="https://reddit.com/r/agriculture?ref=agsist" target="_blank" rel="noopener noreferrer">r/agriculture</a></li>
+                        <li><a href="https://reddit.com/r/tractors?ref=agsist" target="_blank" rel="noopener noreferrer">r/tractors</a></li>
+                        <li><a href="https://reddit.com/r/ranching?ref=agsist" target="_blank" rel="noopener noreferrer">r/ranching</a></li>
+                        <li><a href="https://reddit.com/r/agronomy?ref=agsist" target="_blank" rel="noopener noreferrer">r/agronomy</a></li>
+                        <li><a href="https://reddit.com/r/dairyfarming?ref=agsist" target="_blank" rel="noopener noreferrer">r/dairyfarming</a></li>
+                        <li><a href="https://reddit.com/r/Cattle?ref=agsist" target="_blank" rel="noopener noreferrer">r/Cattle</a></li>
                     </ul>
                 </div>
                 <div class="source-card">
                     <h3><span class="dot university"></span> University Extension</h3>
                     <ul>
-                        <li><a href="https://ipcm.wisc.edu" target="_blank" rel="noopener noreferrer">UW Madison</a></li>
-                        <li><a href="https://farmdoc.illinois.edu" target="_blank" rel="noopener noreferrer">farmdoc (UIUC)</a></li>
-                        <li><a href="https://ag.purdue.edu" target="_blank" rel="noopener noreferrer">Purdue Ag</a></li>
-                        <li><a href="https://crops.extension.iastate.edu" target="_blank" rel="noopener noreferrer">Iowa State</a></li>
-                        <li><a href="https://extension.umn.edu" target="_blank" rel="noopener noreferrer">UMN Crop News</a></li>
-                        <li><a href="https://agrilifetoday.tamu.edu" target="_blank" rel="noopener noreferrer">Texas A&M AgriLife</a></li>
+                        <li><a href="https://ipcm.wisc.edu?ref=agsist" target="_blank" rel="noopener noreferrer">UW Madison</a></li>
+                        <li><a href="https://farmdoc.illinois.edu?ref=agsist" target="_blank" rel="noopener noreferrer">farmdoc (UIUC)</a></li>
+                        <li><a href="https://ag.purdue.edu?ref=agsist" target="_blank" rel="noopener noreferrer">Purdue Ag</a></li>
+                        <li><a href="https://crops.extension.iastate.edu?ref=agsist" target="_blank" rel="noopener noreferrer">Iowa State</a></li>
+                        <li><a href="https://extension.umn.edu?ref=agsist" target="_blank" rel="noopener noreferrer">UMN Crop News</a></li>
+                        <li><a href="https://agrilifetoday.tamu.edu?ref=agsist" target="_blank" rel="noopener noreferrer">Texas A&M AgriLife</a></li>
                     </ul>
                 </div>
                 <div class="source-card">
                     <h3><span class="dot industry"></span> Industry News</h3>
                     <ul>
-                        <li><a href="https://brownfieldagnews.com" target="_blank" rel="noopener noreferrer">Brownfield</a></li>
-                        <li><a href="https://agdaily.com" target="_blank" rel="noopener noreferrer">AgDaily</a></li>
-                        <li><a href="https://farmjournal.com" target="_blank" rel="noopener noreferrer">Farm Journal</a></li>
-                        <li><a href="https://lancasterfarming.com" target="_blank" rel="noopener noreferrer">Lancaster Farming</a></li>
-                        <li><a href="https://modernfarmer.com" target="_blank" rel="noopener noreferrer">Modern Farmer</a></li>
-                        <li><a href="https://civileats.com" target="_blank" rel="noopener noreferrer">Civil Eats</a></li>
-                        <li><a href="https://feedstuffs.com" target="_blank" rel="noopener noreferrer">Feedstuffs</a></li>
-                        <li><a href="https://agweek.com" target="_blank" rel="noopener noreferrer">Agweek</a></li>
+                        <li><a href="https://brownfieldagnews.com?ref=agsist" target="_blank" rel="noopener noreferrer">Brownfield</a></li>
+                        <li><a href="https://agdaily.com?ref=agsist" target="_blank" rel="noopener noreferrer">AgDaily</a></li>
+                        <li><a href="https://farmjournal.com?ref=agsist" target="_blank" rel="noopener noreferrer">Farm Journal</a></li>
+                        <li><a href="https://lancasterfarming.com?ref=agsist" target="_blank" rel="noopener noreferrer">Lancaster Farming</a></li>
+                        <li><a href="https://modernfarmer.com?ref=agsist" target="_blank" rel="noopener noreferrer">Modern Farmer</a></li>
+                        <li><a href="https://civileats.com?ref=agsist" target="_blank" rel="noopener noreferrer">Civil Eats</a></li>
+                        <li><a href="https://feedstuffs.com?ref=agsist" target="_blank" rel="noopener noreferrer">Feedstuffs</a></li>
+                        <li><a href="https://agweek.com?ref=agsist" target="_blank" rel="noopener noreferrer">Agweek</a></li>
                     </ul>
                 </div>
                 <div class="source-card">
                     <h3><span class="dot markets"></span> Markets</h3>
                     <ul>
-                        <li><a href="https://farms.com" target="_blank" rel="noopener noreferrer">Farms.com</a></li>
+                        <li><a href="https://farms.com?ref=agsist" target="_blank" rel="noopener noreferrer">Farms.com</a></li>
                     </ul>
                 </div>
             </div>
