--- a/quickstats.html
+++ b/quickstats.html
@@ -222,19 +222,19 @@
             <div class="panel-head"><h2>🔗 Official USDA Data Sources</h2></div>
             <div class="panel-body">
                 <div class="ext-links">
-                    <a href="https://quickstats.nass.usda.gov/" target="_blank" rel="noopener noreferrer" class="ext-link">
+                    <a href="https://quickstats.nass.usda.gov/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link">
                         <strong>USDA Quick Stats</strong>
                         <span>Full database with advanced filters</span>
                     </a>
-                    <a href="https://www.nass.usda.gov/Quick_Stats/Lite/index.php" target="_blank" rel="noopener noreferrer" class="ext-link">
+                    <a href="https://www.nass.usda.gov/Quick_Stats/Lite/index.php?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link">
                         <strong>Quick Stats Lite</strong>
                         <span>Simplified interface</span>
                     </a>
-                    <a href="https://www.nass.usda.gov/AgCensus/" target="_blank" rel="noopener noreferrer" class="ext-link">
+                    <a href="https://www.nass.usda.gov/AgCensus/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link">
                         <strong>Census of Agriculture</strong>
                         <span>Complete farm data (every 5 years)</span>
                     </a>
-                    <a href="https://www.ers.usda.gov/data-products/" target="_blank" rel="noopener noreferrer" class="ext-link">
+                    <a href="https://www.ers.usda.gov/data-products/?ref=agsist" target="_blank" rel="noopener noreferrer" class="ext-link">
                         <strong>ERS Data Products</strong>
                         <span>Economic research & analysis</span>
                     </a>
