--- a/learn.html
+++ b/learn.html
@@ -384,7 +384,7 @@
             <div style="margin-top:24px;padding:24px;background:var(--card);border:1px solid var(--accent);border-radius:12px;text-align:center">
                 <div style="font-size:1.1rem;font-weight:600;margin-bottom:8px">Need Personalized Advice?</div>
                 <div style="font-size:0.9rem;color:var(--dim);margin-bottom:16px">Our CCAs can develop a marketing plan for your operation.</div>
-                <a href="https://farmers1st.com" target="_blank" rel="noopener noreferrer" style="display:inline-block;background:var(--accent);color:black;padding:12px 24px;border-radius:6px;text-decoration:none;font-weight:600">Contact Farmers First →</a>
+                <a href="https://farmers1st.com?ref=agsist" target="_blank" rel="noopener noreferrer" style="display:inline-block;background:var(--accent);color:black;padding:12px 24px;border-radius:6px;text-decoration:none;font-weight:600">Contact Farmers First →</a>
             </div>
         </div>
     </main>
