--- a/offices.html
+++ b/offices.html
@@ -78,12 +78,12 @@
             <div class="panel-head"><h2>🔗 Quick Links</h2></div>
             <div class="panel-body">
                 <div class="quick-grid">
-                    <a href="https://offices.sc.egov.usda.gov/locator/app" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🔍 Service Center Locator</span><small>Find any <span class="tip" data-tip="United States Department of Agriculture">USDA</span> office by address</small></a>
-                    <a href="https://www.farmers.gov/" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌾 Farmers.gov</span><small>Programs, loans, disaster assistance</small></a>
-                    <a href="https://www.fsa.usda.gov/programs-and-services/" target="_blank" rel="noopener noreferrer" class="quick-card"><span>📋 <span class="tip" data-tip="Farm Service Agency — farm programs &amp; loans">FSA</span> Programs</span><small><span class="tip" data-tip="Conservation Reserve Program">CRP</span>, <span class="tip" data-tip="Agriculture Risk Coverage">ARC</span>, <span class="tip" data-tip="Price Loss Coverage">PLC</span>, loans</small></a>
-                    <a href="https://www.nrcs.usda.gov/getting-assistance" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌱 <span class="tip" data-tip="Natural Resources Conservation Service">NRCS</span> Assistance</span><small><span class="tip" data-tip="Environmental Quality Incentives Program">EQIP</span>, <span class="tip" data-tip="Conservation Stewardship Program">CSP</span>, conservation</small></a>
-                    <a href="https://www.rd.usda.gov/" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🏠 Rural Development</span><small>Housing, business, utilities</small></a>
-                    <a href="https://www.rma.usda.gov/tools" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🛡️ Crop Insurance</span><small><span class="tip" data-tip="Risk Management Agency — crop insurance">RMA</span> tools &amp; agents</small></a>
+                    <a href="https://offices.sc.egov.usda.gov/locator/app?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🔍 Service Center Locator</span><small>Find any <span class="tip" data-tip="United States Department of Agriculture">USDA</span> office by address</small></a>
+                    <a href="https://www.farmers.gov/?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌾 Farmers.gov</span><small>Programs, loans, disaster assistance</small></a>
+                    <a href="https://www.fsa.usda.gov/programs-and-services/?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>📋 <span class="tip" data-tip="Farm Service Agency — farm programs &amp; loans">FSA</span> Programs</span><small><span class="tip" data-tip="Conservation Reserve Program">CRP</span>, <span class="tip" data-tip="Agriculture Risk Coverage">ARC</span>, <span class="tip" data-tip="Price Loss Coverage">PLC</span>, loans</small></a>
+                    <a href="https://www.nrcs.usda.gov/getting-assistance?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🌱 <span class="tip" data-tip="Natural Resources Conservation Service">NRCS</span> Assistance</span><small><span class="tip" data-tip="Environmental Quality Incentives Program">EQIP</span>, <span class="tip" data-tip="Conservation Stewardship Program">CSP</span>, conservation</small></a>
+                    <a href="https://www.rd.usda.gov/?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🏠 Rural Development</span><small>Housing, business, utilities</small></a>
+                    <a href="https://www.rma.usda.gov/tools?ref=agsist" target="_blank" rel="noopener noreferrer" class="quick-card"><span>🛡️ Crop Insurance</span><small><span class="tip" data-tip="Risk Management Agency — crop insurance">RMA</span> tools &amp; agents</small></a>
                 </div>
             </div>
         </div>
@@ -165,8 +165,8 @@
             '<div class="office-row"><span class="office-label">Phone</span><span class="office-value"><a href="tel:' + o.phone.replace(/[^0-9]/g,'') + '">' + o.phone + '</a></span></div>' +
             '<div class="office-row"><span class="office-label">City</span><span class="office-value">' + o.city + ', ' + code + '</span></div>' +
             '<div class="office-links">' +
-                '<a class="office-link" href="https://offices.sc.egov.usda.gov/locator/app?state=' + code + '" target="_blank" rel="noopener noreferrer">Find county offices in ' + code + ' →</a>' +
-                '<a class="office-link" href="https://www.nrcs.usda.gov/contact/find-a-service-center" target="_blank" rel="noopener noreferrer">NRCS offices →</a>' +
+                '<a class="office-link" href="https://offices.sc.egov.usda.gov/locator/app?state=' + code + '&ref=agsist" target="_blank" rel="noopener noreferrer">Find county offices in ' + code + ' →</a>' +
+                '<a class="office-link" href="https://www.nrcs.usda.gov/contact/find-a-service-center?ref=agsist" target="_blank" rel="noopener noreferrer">NRCS offices →</a>' +
             '</div>';
         card.classList.add('active');
         sel.value = code;
