--- a/privacy.html
+++ b/privacy.html
@@ -135,7 +135,7 @@
         <h2>Third-Party Services</h2>
         <p>We use the following third-party services:</p>
         <ul>
-            <li><strong>Google Analytics:</strong> For website analytics. See <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google's Privacy Policy</a>.</li>
+            <li><strong>Google Analytics:</strong> For website analytics. See <a href="https://policies.google.com/privacy?ref=agsist" target="_blank" rel="noopener">Google's Privacy Policy</a>.</li>
             <li><strong>Market Data Providers:</strong> Price data is sourced from public APIs and may be delayed.</li>
         </ul>
 
